Clear solution, add colab link

--- a/notebook/udacity_cs344_hw1.ipynb
+++ b/notebook/udacity_cs344_hw1.ipynb
@@ -6,7 +6,8 @@
       "name": "udacity-cs344-hw1",
       "version": "0.3.2",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/depctg/udacity-cs344-colab/blob/master/notebook/udacity_cs344_hw1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "metadata": {
         "id": "hse6gSyUS5ka",
@@ -54,13 +65,12 @@
         "// Homework 1\n",
         "// Color to Greyscale Conversion\n",
         "\n",
-        "\n",
         "//A common way to represent color images is known as RGBA - the color\n",
-        "//is specified by how much Red, Green, and Blue is in it.\n",
-        "//The 'A' stands for Alpha and is used for transparency; it will be\n",
+        "//is specified by how much Red, Grean and Blue is in it.\n",
+        "//The 'A' stands for Alpha and is used for transparency, it will be\n",
         "//ignored in this homework.\n",
         "\n",
-        "//Each channel Red, Blue, Green, and Alpha is represented by one byte.\n",
+        "//Each channel Red, Blue, Green and Alpha is represented by one byte.\n",
         "//Since we are using one byte for each color there are 256 different\n",
         "//possible values for each color.  This means we use 4 bytes per pixel.\n",
         "\n",
@@ -69,7 +79,7 @@
         "\n",
         "//To convert an image from color to grayscale one simple method is to\n",
         "//set the intensity to the average of the RGB channels.  But we will\n",
-        "//use a more sophisticated method that takes into account how the eye \n",
+        "//use a more sophisticated method that takes into account how the eye\n",
         "//perceives color and weights the channels unequally.\n",
         "\n",
         "//The eye responds most strongly to green followed by red and then blue.\n",
@@ -78,7 +88,7 @@
         "\n",
         "//I = .299f * R + .587f * G + .114f * B\n",
         "\n",
-        "//Notice the trailing f's on the numbers which indicate that they are \n",
+        "//Notice the trailing f's on the numbers which indicate that they are\n",
         "//single precision floating point constants and not double precision\n",
         "//constants.\n",
         "\n",
@@ -86,7 +96,6 @@
         "//so that the entire image is processed.\n",
         "\n",
         "#include \"utils.h\"\n",
-        "#include <stdio.h>\n",
         "\n",
         "__global__\n",
         "void rgba_to_greyscale(const uchar4* const rgbaImage,\n",
@@ -101,14 +110,6 @@
         "  //The output (greyImage) at each pixel should be the result of\n",
         "  //applying the formula: output = .299f * R + .587f * G + .114f * B;\n",
         "  //Note: We will be ignoring the alpha channel for this conversion\n",
-        "  int idx_x = blockIdx.x * blockDim.x + threadIdx.x;\n",
-        "  int idx_y = blockIdx.y * blockDim.y + threadIdx.y;\n",
-        "  if (idx_x < numCols && idx_y < numRows) {\n",
-        "    int idx = idx_y * numCols + idx_x;\n",
-        "    uchar4 pixel = rgbaImage[idx];\n",
-        "    float grey = .299f * pixel.x + .587f * pixel.y + .114f * pixel.z;\n",
-        "    greyImage[idx] = (unsigned char)grey;\n",
-        "  }\n",
         "\n",
         "  //First create a mapping from the 2D block and grid locations\n",
         "  //to an absolute 2D location in the image, then use that to\n",
@@ -120,15 +121,12 @@
         "{\n",
         "  //You must fill in the correct sizes for the blockSize and gridSize\n",
         "  //currently only one block with one thread is being launched\n",
-        "  \n",
-        "  const int BLOCK_WIDTH = 16;\n",
-        "  const int BLOCK_X = numCols % BLOCK_WIDTH ? numCols / BLOCK_WIDTH + 1 : numCols / BLOCK_WIDTH;\n",
-        "  const int BLOCK_Y = numRows % BLOCK_WIDTH ? numRows / BLOCK_WIDTH + 1 : numRows / BLOCK_WIDTH;\n",
-        "  const dim3 blockSize(BLOCK_WIDTH, BLOCK_WIDTH, 1);  //TODO\n",
-        "  const dim3 gridSize( BLOCK_X, BLOCK_Y, 1);  //TODO\n",
+        "  const dim3 blockSize(1, 1, 1);  //TODO\n",
+        "  const dim3 gridSize( 1, 1, 1);  //TODO\n",
         "  rgba_to_greyscale<<<gridSize, blockSize>>>(d_rgbaImage, d_greyImage, numRows, numCols);\n",
-        "  \n",
+        "\n",
         "  cudaDeviceSynchronize(); checkCudaErrors(cudaGetLastError());\n",
+        "\n",
         "}"
       ],
       "execution_count": 0,
@@ -160,19 +158,23 @@
       "source": [
         "# plot output images\n",
         "import matplotlib.pyplot as plt\n",
-        "_,ax = plt.subplots(1,3, dpi=200)\n",
+        "_,ax = plt.subplots(2,2, dpi=150)\n",
         "\n",
-        "ax[0].imshow(plt.imread(\"HW1_output.png\"))\n",
-        "ax[0].set_title(\"output\")\n",
-        "ax[0].grid(False)\n",
+        "ax[0][0].imshow(plt.imread(\"../src/HW1/cinque_terre_small.jpg\"))\n",
+        "ax[0][0].set_title(\"original\")\n",
+        "ax[0][0].grid(False)\n",
         "\n",
-        "ax[1].imshow(plt.imread(\"HW1_differenceImage.png\"))\n",
-        "ax[1].set_title(\"difference\")\n",
-        "ax[1].grid(False)\n",
+        "ax[0][1].imshow(plt.imread(\"HW1_output.png\"))\n",
+        "ax[0][1].set_title(\"output\")\n",
+        "ax[0][1].grid(False)\n",
         "\n",
-        "ax[2].imshow(plt.imread(\"HW1_reference.png\"))\n",
-        "ax[2].set_title(\"reference\")\n",
-        "ax[2].grid(False)\n",
+        "ax[1][0].imshow(plt.imread(\"HW1_reference.png\"))\n",
+        "ax[1][0].set_title(\"reference\")\n",
+        "ax[1][0].grid(False)\n",
+        "\n",
+        "ax[1][1].imshow(plt.imread(\"HW1_differenceImage.png\"))\n",
+        "ax[1][1].set_title(\"difference\")\n",
+        "ax[1][1].grid(False)\n",
         "\n",
         "plt.show()"
       ],
